--- a/index.html
+++ b/index.html
@@ -680,18 +680,18 @@
         </div>
         <div class="col-12 padding-footer">
           <h3
-            class="name size-quote second-part-quote mobile-size-footer"
-            align="center"
+            class="name size-quote  mobile-size-footer"
+           align="center"
           >
             <div class="letters letters-0 ×">L</div>
-            <div class="letters letters-1 A">E</div>
-            <div class="letters letters-2 L">T'</div>
-            <div class="letters letters-3 E">S&emsp;</div>
-            <div class="letters letters-4 X">W</div>
-            <div class="letters letters-5 ×">O</div>
-            <div class="letters letters-6 B">R</div>
-            <div class="letters letters-7 R">K</div>
-            <div class="letters letters-9 W">!</div>
+            <div class="letters letters-1 ">E</div>
+            <div class="letters letters-2 ">T'</div>
+            <div class="letters letters-3 ">S&emsp;</div>
+            <div class="letters letters-4 ">W</div>
+            <div class="letters letters-5 ">O</div>
+            <div class="letters letters-6 ">R</div>
+            <div class="letters letters-7 ">K</div>
+            <div class="letters letters-9 ">!</div>
           </h3>
           <div class="col-12" align="center">
             <form action="contact.html">
