--- a/contact.html
+++ b/contact.html
@@ -119,8 +119,8 @@
               <div class="row" align="center">
                 <div class="col-12">
                   <h3 class="email-contact">
-                    <a href="mailto:yookanubani@gmail.com" class="link-email"
-                      >yookanubani@gmail.com</a
+                    <a href="mailto:ayahalnubani@gmail.com" class="link-email"
+                      >ayahalnubani@gmail.com</a
                     >
                   </h3>
                 </div>
