--- a/index.html
+++ b/index.html
@@ -718,7 +718,7 @@
         </div>
         <div class="col-6" align="center">
           >
-          <a href="mailto:yookanubani@gmail.com" class="footer-description"
+          <a href="mailto:ayahalnubani@gmail.com" class="footer-description"
             >Email</a
           >
           <a
