--- a/contact.html
+++ b/contact.html
@@ -137,11 +137,13 @@
       <!--Contact information-->
       <!--End of container-->
     </div>
-    <script
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="assets/js/js.js"></script>
+        <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-kQtW33rZJAHjgefvhyyzcGF3C5TFyBQBA13V1RKPf4uH+bwyzQxZ6CmMZHmNBEfJ"
       crossorigin="anonymous"
     ></script>
-    <script src="assets/js/js.js"></script>
+ 
   </body>
 </html>
