--- a/index.html
+++ b/index.html
@@ -296,8 +296,7 @@
                   align="left"
                 >
                   A full knowledge of HTML / CSS and Javascript. I make
-                  responsive web applications with Bootstrap and interactive
-                  UI's with Angular Framework.
+                  responsive web applications with Angular Framework.
                 </div>
               </div>
             </div>
