--- a/index.html
+++ b/index.html
@@ -190,12 +190,12 @@
       <div class="row">
         <div class="col-12">
           <h3 align="center" class="size-quote first-part-quote">
-            Is not just what it looks like and feels like.
+            The design is not just what it looks like and feels like.
           </h3>
         </div>
         <div class="col-12">
           <h3 align="center" class="size-quote second-part-quote">
-            Is how it works.
+            The design is how it works.
           </h3>
           <p align="center" class="steve-jobs">- Steve Jobs</p>
         </div>
@@ -295,7 +295,7 @@
                   class="col description-skill developer-skills"
                   align="left"
                 >
-                  A full knowledge of HTML / CSS and Javascript. I make
+                  Full knowledge of HTML / CSS and Javascript. I make
                   responsive web applications with Angular Framework.
                 </div>
               </div>
@@ -484,7 +484,7 @@
                 <div class="card-body" align="center">
                   <h6 class="card-title card-blue">Qistas</h6>
                   <p class="card-info">
-                    Frontend developer Intern, i have enhanced my abilities in
+                    Frontend Developer Intern, I have enhanced my abilities in
                     building web-apps.
                   </p>
                 </div>
@@ -496,7 +496,7 @@
                 <div class="card-body" align="center">
                   <h6 class="card-title card-blue">Qistas</h6>
                   <p class="card-info">
-                    Frontend developer Intern, i have enhanced my abilities in
+                    Frontend Developer Intern, I have enhanced my abilities in
                     building web-apps.
                   </p>
                 </div>
@@ -508,7 +508,7 @@
                 <div class="card-body" align="center">
                   <h6 class="card-title card-blue">Qistas</h6>
                   <p class="card-info">
-                    Frontend developer Intern, i have enhanced my abilities in
+                    Frontend Developer Intern, I have enhanced my abilities in
                     building web-apps.
                   </p>
                 </div>
@@ -569,7 +569,7 @@
                 <div class="card-body" align="center">
                   <h6 class="card-title card-green">Jay Softworks</h6>
                   <p class="card-info">
-                    Part time Frontend Developer, developing web-app for Parknha
+                    Part-time Frontend Developer, developing web-app for Parknha
                     using Angular and Ionic.
                   </p>
                 </div>
