--- a/index.html
+++ b/index.html
@@ -114,15 +114,6 @@
         </div>
       </div>
 
-      <!--Developer-->
-      <div class="container position-relative d-none d-lg-block ui-design-card">
-        <div class="row row-cols-auto">
-          <div class="col-7"></div>
-          <div class="col skills-bubble name-card">Frontend Developer 📐</div>
-        </div>
-      </div>
-
-  
       <div class="container position-relative d-none d-lg-block artist-move">
         <div class="row row-cols-auto">
           <div class="col-6 d-none d-sm-none d-md-block d-lg-block"></div>
@@ -227,7 +218,7 @@
         <!--New row-->
         <div class="col-1"></div>
         <div class="col-6">
-          <h3 class="tittle-services">The most creative intuitive workmate.</h3>
+          <h3 class="tittle-services">The most creative workmate.</h3>
         </div>
 
         <!--Icon-->
@@ -638,7 +629,7 @@
       <div class="container moving-quote-mobile">
         <div class="row" align="center">
           <div class="col-12 d-flex justify-content-center" align="center">
-            <h3 class="about-me-quote">Multitalented. Intuitive. Dedicated.</h3>
+            <h3 class="about-me-quote">Creative. Enthusiastic. Consistent.</h3>
           </div>
           <div
             class="col-12 moving-click d-flex justify-content-center"
