--- a/contact.html
+++ b/contact.html
@@ -95,7 +95,7 @@
           </div>
         </div>
       </nav>
-      <!--Image Memoji-->
+      <!--Image bitmoji-->
       <div class="row">
         <div class="col-12" align="center">
           <div class="card padding-contact padding-body-contact">
