--- a/contact.html
+++ b/contact.html
@@ -128,7 +128,7 @@
                       </span>
                   </div>
                   <div class="wrap-input100 " data-validate="Valid email is required: ex@abc.xyz">
-                      <input class="input100" id="email" type="text" name="email" placeholder="Email">
+                      <input class="input100" id="email" type="text" placeholder="Enter your Email" name="email" placeholder="Email">
                       <span class="focus-input100"></span>
                       <span class="symbol-input100">
                           <i class="fa fa-envelope" aria-hidden="true"></i>
